@@ -20,12 +20,12 @@ package forge.game.zone;
 import java.util.*;
 import java.util.function.Predicate;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ListMultimap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.MultimapBuilder;
 
+import forge.card.CardStateName;
 import forge.game.Game;
 import forge.game.GameType;
 import forge.game.card.*;
@@ -145,7 +145,7 @@ public class Zone implements java.io.Serializable, Iterable<Card> {
 
         c.setZone(this);
 
-        if ((zoneType == ZoneType.Battlefield || !c.isToken()) || (zoneType == ZoneType.Stack && c.getCopiedPermanent() != null)) {
+        if ((zoneType == ZoneType.Battlefield || !c.isToken() || c.getCurrentStateName() == CardStateName.PreparedSpell) || (zoneType == ZoneType.Stack && c.getCopiedPermanent() != null)) {
             if (index == null) {
                 cardList.add(c);
             } else {
@@ -245,7 +245,7 @@ public class Zone implements java.io.Serializable, Iterable<Card> {
         }
 
         if (cardsAdded.isEmpty()) {
-            return ImmutableList.of();
+            return List.of();
         }
 
         // all cards if key == null
